--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -59,4 +59,10 @@
 				margin: (_size(element-margin) * 0.75) 0;
 			}
 		}
+
+		&.small {
+			display: block;
+			float: left;
+			width: 30%;
+		}
 	}
