--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -43,3 +43,23 @@
   @include vendor('flex-direction', 'row');
   
 }
+
+@include breakpoint(small) {
+  #gallery {
+    scroll-snap-type: x mandatory;
+    overflow-x: scroll;
+    display: flex;
+  }
+
+  #gallery div.slide {
+    scroll-snap-align: center;
+    min-width: 100%;
+    display: grid;
+    justify-items: center;
+    padding: 0 10px;
+  }
+
+  #gallery div.slide1 {
+    min-width: 90%;
+  }
+}
