--- a/src/assets/scss/components/_slider.scss
+++ b/src/assets/scss/components/_slider.scss
@@ -32,7 +32,7 @@
   @include vendor('flex-direction', 'column');
   
   @include breakpoint(small) {
-    @include padding(0, 0, (0, 0, 4em, 0));
+    @include padding(0, 0, (2em, 2em, 4em, 2em));
   }
 }
 
@@ -42,24 +42,54 @@
   @include vendor('justify-items', 'center');
   @include vendor('flex-direction', 'row');
   
+  @include breakpoint(small) {
+    @include padding(0, 0, (1em, 1em, 2em, 2em));
+  }
+}
+
+.heading-link {
+  margin-left: 1em;
+  margin-right: 1em;
+  display: inline-block;
+}
+
+.va-fix {
+  vertical-align: middle;
 }
 
 @include breakpoint(small) {
-  #gallery {
-    scroll-snap-type: x mandatory;
-    overflow-x: scroll;
-    display: flex;
-  }
+  #gallery-container {
+    scroll-snap-type: y proximity;
+    -webkit-overflow-scrolling: touch;
 
-  #gallery div.slide {
-    scroll-snap-align: center;
-    min-width: 100%;
-    display: grid;
-    justify-items: center;
-    padding: 0 10px;
-  }
+    #gallery {
+      scroll-snap-align: end;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
+      overflow-x: scroll;
+      display: flex;
 
-  #gallery div.slide1 {
-    min-width: 90%;
+      .slide {
+        scroll-snap-align: center;
+        min-width: 100%;
+        display: grid;
+        justify-items: center;
+        padding: 5 10 5 10px;
+        overflow: visible;
+
+      }
+
+      .slide1 {
+        min-width: 90%;
+      }
+
+      .slide:nth-of-type(even) {
+        background-color: _palette(accent2);
+      }
+
+      .slide:nth-of-type(odd) {
+        background-color: _palette(accent5);        
+      }
+    }
   }
 }
